# ComfyUI_VoxCPM_SM

./: .gitignore  README.md  VoxCPM_node.py  __init__.py  pyproject.toml  requirements.txt
VoxCPM/: README.md  app.py  lora_ft_webui.py  pyproject.toml
VoxCPM/VoxCPM15/: config.json
VoxCPM/conf/voxcpm_v1/: voxcpm_finetune_lora.yaml
VoxCPM/conf/voxcpm_v1.5/: voxcpm_finetune_lora.yaml
VoxCPM/docs/: finetune.md  performance.md  release_note.md  usage_guide.md
VoxCPM/scripts/: test_voxcpm_ft_infer.py  test_voxcpm_lora_infer.py  train_voxcpm_finetune.py  train_voxcpm_finetune_w.py
VoxCPM/src/voxcpm/: core.py
VoxCPM/src/voxcpm/model/: voxcpm.py
example_workflows/: VOXCPM.json
